# Smart_plug_cmake

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/Bluetooth/: Bluetooth.c  CMakeLists.txt
components/Bluetooth/include/: Bluetooth.h  CMakeLists.txt
components/CSE7759B/: CMakeLists.txt
components/Cache_data/: CMakeLists.txt
components/E2prom/: CMakeLists.txt
components/Http/: CMakeLists.txt
components/Json_parse/: CMakeLists.txt  Json_parse.c
components/Led/: CMakeLists.txt
components/Mqtt/: CMakeLists.txt
components/Nvs/: CMakeLists.txt
components/RS485_Read/: CMakeLists.txt
components/RtcUsr/: CMakeLists.txt
components/ServerTimer/: CMakeLists.txt
components/Smartconfig/: CMakeLists.txt
components/Spi_flash/: CMakeLists.txt
components/Switch/: CMakeLists.txt
components/Uart0/: CMakeLists.txt
components/base64/: CMakeLists.txt
components/bsp/: CMakeLists.txt
components/ds18b20/: CMakeLists.txt
components/ota/: CMakeLists.txt
components/user_keydriver/: CMakeLists.txt
main/: hello_world_main.c
